Changelog
=========

0.0.16 (unreleased)
-------------------

- Nothing changed yet.


0.0.15 (2012-10-05)
-------------------

- Fix regression in migrate script.


0.0.14 (2012-10-03)
-------------------

- Automatic migration to split Data.fs when mount points are declared in zope.conf


0.0.13 (2011-09-29)
-------------------

- Add a new 'rootify' option. It's only available to virtualenv peeps atm.


0.0.12 (2011-09-23)
-------------------

- Fix Plone 3 support (creating new site was impacted by the 4.1/2.5 changes)


0.0.11 (2011-09-22)
-------------------

- The properties and script helper are no longer supported
- Write a script that can run migrations without running the rest of buildout
- This script supports a '-r' flag for rebuild the /portal object from scratch.
- Don't hang if CMFSquidTool has a purge queue that is unending
- Drop JSON dependency
- Better 2.5 and 4.1 support


0.0.10 (2011-09-21)
-------------------

- Use savepoint() instead of subtransaction
- More useful output when quick installing and applying profiles


0.0.9 (2011-09-03)
------------------

- Add support for calling any setters from buildout.
- If a transient error occurs, retry up to ``${:attempts}`` times.

0.0.8 (2011-08-30)
------------------

 - Support subtransactions (stops CacheSetup hanging)
 - Allow the Site recipe to set properties without a seperate properties part

0.1 (2010-04-24)
----------------

- Created friendly fork of collective.recipe.plonesite
- Catch non-zero exit codes
- Added a test to see if zeo is running before starting it
- Only shutdown zeo if we started it
